Bug 303730 - <textarea>s in other tabs mess up focus in current 'tab', patch by chpe(at)gnome.org, r=jst, sr=bryner